--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@
 body {
   font-family: "Manrope", sans-serif;
 }
+* {
+  scroll-behavior: smooth;
+}
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
